@@ -7,8 +7,9 @@ kano-settings (4.0.5-0) unstable; urgency=low
   * Fixed the Wi-Fi refresh screen on connection failure
   * Create test coverage report
   * Run tests on push
+  * Fixed applying setting when clicking on Flip Screen option
 
- -- Team Kano <dev@kano.me>  Thu, 21 Dec 2017 14:35:00 +0100
+ -- Team Kano <dev@kano.me>  Wed, 24 Jan 2018 14:15:00 +0100
 
 kano-settings (4.0.4-1) unstable; urgency=low
 
